# gseim

.github/workflows/: gseim-ci.yml
gseim_grc/: pyproject.toml  setup.py  tox.ini
gseim_grc/src/: BUILD  CMakeLists.txt  WORKSPACE  build.py  foo.py  pyproject.toml  requirements.txt  tox.ini
gseim_grc/src/grc/: SolveBlock.py
gseim_grc/src/grc/core/utils/: gutils.py
gseim_grc/src/grc/gui/: Constants.py  MainWindow.py  Notebook.py  solveblocks.py
gseim_grc/src/gseim/: parse_filters.py
gseim_grc/src/gseim/data/: gseim_slvparms.in  slvparms.in
gseim_grc/src/gseim/test_data/input/ac_controller/: ac_controller_3.grc
gseim_grc/src/gseim/test_data/input/ac_to_ac/: cyclo_converter_1ph_1.grc
gseim_grc/src/gseim/test_data/input/controlled_rectifier/: controlled_rectifier_4.grc
gseim_grc/src/gseim/test_data/input/dc_commutation/: dc_commutation_3.grc
gseim_grc/src/gseim/test_data/input/dc_to_dc/: boost.grc  dual_active_bridge_converter.grc
gseim_grc/src/gseim/test_data/input/resonant_converter/: resonant_full_bridge_1.grc
gseim_grc/src/gseim/test_data/input/test/: test_filter_1.grc  test_filter_2.grc  test_user_lib_hb.grc
gseim_grc/src/gseim/test_data/output/ac_controller/: ac_controller_3.in
gseim_grc/src/gseim/test_data/output/ac_to_ac/: cyclo_converter_1ph_1.in
gseim_grc/src/gseim/test_data/output/controlled_rectifier/: controlled_rectifier_4.in
gseim_grc/src/gseim/test_data/output/dc_commutation/: dc_commutation_3.in
gseim_grc/src/gseim/test_data/output/dc_to_dc/: boost.in  dual_active_bridge_converter.in
gseim_grc/src/gseim/test_data/output/resonant_converter/: resonant_full_bridge_1.in
gseim_grc/src/gseim/test_data/output/test/: test_filter_1.in  test_filter_2.in  test_user_lib_hb.in
gseim_grc/src/gseim_cpp_lib/: CMakeLists.txt  gen_ebe.py  gen_xbe.py  gseim_solver_test.py  main.cpp  routines1.cpp  routines2.cpp  solveblocks.cpp  solveblocks.h
gseim_grc/src/gseim_cpp_lib/solve_block/: BUILD  params_db.cpp  params_db.h  params_db_test.cpp
gseim_grc/src/gseim_cpp_lib/test_data/input/: buck.in
gseim_grc/src/notebooks/: BUILD  README.md  launcher.py
gseim_grc/src/notebooks/data/: example.ipynb
