[tool.poetry]
name = "gseim"
version = "0.0.1"
description = ""
authors = ["Mahesh Patil <mbpatil@ee.iitb.ac.in>"]
license = "GPL-3.0-only"
build = "build.py"
include = ["gseim_solver/bin/gseim_solver", "gseim_solver/CMakeLists.txt", "CMakeLists.txt"]

[tool.poetry.dependencies]
python = "^3.8.0"
importlib-resources = "^5.8.0"
matplotlib = "^3.5.3"
numpy = "^1.23.1"
platformdirs = "^2.5.2"
psutil = "^5.9.1"
pycairo = "^1.21.0"
PyGObject = "^3.42.1"
pyparsing = "^3.0.9"
pytest = "^7.1.2"
pytest-qt = "^4.1.0"
PyYAML = "^6.0.0"
appdirs = "^1.4.4"
pytest-xvfb = "^2.0.0"
pyqt5 = { version = "^5.0.0", optional = true }
pyqt6 = { version = "^6.0.0", optional = true }

[tool.poetry.dev-dependencies]
poetry = "^1"
cmake-build-extension = "^0.5"
pybind11 = "^2.10"
# tox-poetry-installer = {extras = ["poetry"], version = "^0.8.4"}

[tool.poetry.extras]
pyqt6 = ["pyqt6"]
pyqt5 = ["pyqt5"]

[tool.poetry.scripts]
gseim_parser = "gseim.gseim_parser:console_entry"
gseim_solver = "gseim_solver.bin.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0", "cmake-build-extension", "pybind11"]
build-backend = "poetry.core.masonry.api"
